Connect frontend to Java gateway with validated chat API